fixes to spacing sponsor

--- a/styles/Sponsor.css
+++ b/styles/Sponsor.css
@@ -1608,6 +1608,10 @@ h4{
 
 @media (max-width: 400px) {
 
+    .last-feat{
+        float: left;
+    }
+    
     .logo img{
         height: 50px;
         margin-top: 5%;
@@ -1760,7 +1764,7 @@ h4{
         line-height: 1.4;
         font-size: 12px;
         padding-top: 3px;
-        padding-bottom: 25px;
+        padding-bottom: 15px;
     }
 
     .first-feature.column.nine-tenth{
